# mast_gpt_bot

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rustfmt.toml
config/: prompts.json
src/: config.rs  conversation_store.rs  main.rs  mastodon.rs  notification_stream.rs  openai_api.rs  state.rs  test_support.rs  util.rs
src/config/: bot_config.rs  env_parsing.rs  mod.rs  prompts.json  redacted.rs  visibility.rs
src/notification_stream/: connection.rs  context.rs  handler.rs  mod.rs  rate_limit.rs  recoverable.rs
src/openai_api/: call_config.rs  free_toot.rs  mod.rs  prompts.rs  reply.rs  stream.rs  types.rs
src/openai_api/reply/: message_builder.rs  mod.rs  parrot_check.rs  search.rs  time.rs
