[package]
name = "mast_gpt_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
url = "2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
once_cell = "1"
chrono = "0.4"
chrono-tz = "0.10.4"
